--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    ddd
+     <header class="flex items-center justify-between mb-6">
+      <h1 class="text-2xl font-bold">Weather Forecast</h1>
+      <div class="text-sm text-slate-300">Data from OpenWeatherMap</div>
+    </header>
 </body>
 </html>
