--- a/weatherForecast.html
+++ b/weatherForecast.html
@@ -49,6 +49,6 @@
     </footer>
   </div>
 
-  <script src="./script.js"></script>
+  <script src="./weatherForecast.js"></script>
 </body>
 </html>
